--- a/profile-1.html
+++ b/profile-1.html
@@ -132,7 +132,6 @@
                     <div class="row mb-3"><div class="col-lg-4">
     <div class="card mb-3">
         <div class="card-body text-center shadow"><img class="rounded-circle mb-3 mt-4" src="assets/img/dogs/image2.jpeg" width="160" height="160" />
-            <div class="mb-3"><button class="btn btn-primary btn-sm" type="button">Change Photo</button></div>
         </div>
     </div>
     <div class="card shadow mb-4"></div>
@@ -178,14 +177,14 @@
                                             <form>
                                                 <div class="row">
                                                     <div class="col">
-                                                        <div class="mb-3"><label class="form-label" for="username"><strong>Employee ID</strong>&nbsp;<br></label><input id="username" class="form-control" type="text" placeholder="Employee id" name="username" /></div>
+                                                        <div class="mb-3"><label class="form-label" for="username"><strong>Employee ID</strong>&nbsp;<br></label><input id="username" class="form-control" type="text" placeholder="509" name="username" /></div>
                                                     </div>
                                                     <div class="col"><label class="form-label" for="employee_type"><strong>Employee Type</strong></label><select class="form-control">
     <optgroup label="choose an employee type">
-        <option value="1" selected>Full Time</option>
+        <option value="1" >Full Time</option>
         <option value="2">Part Time</option>
         <option value="3">K12 Work Immersion</option>
-        <option value="4">College Internship</option>
+        <option value="4" selected>College Internship</option>
         <option value="5">Graduate Summer Program</option>
         <option value="6">Undergraduate Summer Program</option>
         <option value="7">Regular Graduate Program</option>
@@ -195,18 +194,18 @@
                                                 </div>
                                                 <div class="row">
                                                     <div class="col">
-                                                        <div class="mb-3"><label class="form-label" for="first_name"><strong>First Name</strong></label><input id="first_name" class="form-control" type="text" placeholder="First Name" name="first_name" /></div>
-                                                        <div class="mb-3"><label class="form-label" for="email"><strong>Personal Email Address</strong></label><input id="email" class="form-control" type="email" placeholder="Email Address" name="email" /></div><label class="form-label" for="first_name"><strong>Date of Orientation</strong></label><input id="orientation-date" class="form-control" type="text" placeholder="mm/dd/yyyy" name="first_name" /><label class="form-label" for="first_name"><strong>Date of Last Day&nbsp;</strong></label><input class="form-control" type="date"><label class="form-label" for="first_name"><strong>School&nbsp;</strong>&nbsp;Name</label><input id="university_name" class="form-control" type="text" placeholder="School Name" name="university_name" /><label class="form-label" for="first_name"><strong>OJT Coordinator Name&nbsp;</strong><br></label><input id="ojt-coordinator-name" class="form-control" type="text" placeholder="-" name="ojt_coordinator_name" /><label class="form-label" for="first_name"><strong>OJT Coordinator E-mail Address</strong></label><input id="first_name" class="form-control" type="text" placeholder="-" name="first_name" />
+                                                        <div class="mb-3"><label class="form-label" for="first_name"><strong>First Name</strong></label><input id="first_name" class="form-control" type="text" placeholder="Godwin Lorenz" name="first_name" /></div>
+                                                        <div class="mb-3"><label class="form-label" for="email"><strong>Personal Email Address</strong></label><input id="email" class="form-control" type="email" placeholder="godwinllabres@gmail.com" name="email" /></div><label class="form-label" for="first_name"><strong>Date of Orientation</strong></label><input id="orientation-date" class="form-control" type="text" placeholder="mm/dd/yyyy" name="first_name" /><label class="form-label" for="first_name"><strong>Date of Last Day&nbsp;</strong></label><input class="form-control" type="date">
                                                     </div>
                                                     <div class="col">
-                                                        <div class="mb-3"><label class="form-label" for="last_name"><strong>Last Name</strong></label><input id="last_name" class="form-control" type="text" placeholder="Last Name" name="last_name" />
+                                                        <div class="mb-3"><label class="form-label" for="last_name"><strong>Last Name</strong></label><input id="last_name" class="form-control" type="text" placeholder="Llabres" name="last_name" />
                                                             <div class="col">
                                                                 <div class="mb-3"></div>
                                                             </div>
-                                                        </div><label class="form-label" for="email"><strong>Work Email Address</strong></label><input id="email" class="form-control" type="email" placeholder="Email Address" name="email" /><label class="form-label" for="first_name"><strong>Date of First Day</strong></label><input class="form-control" type="date"><label class="form-label" for="first_name"><strong>Date of Exit Day</strong></label><input class="form-control" type="date"><label class="form-label" for="first_name"><strong>Course Name</strong></label><input id="course-name" class="form-control" type="text" placeholder=" BS Computer Science" name="course_name" /><label class="form-label" for="first_name"><strong>Contact Number&nbsp;</strong></label><input id="first_name" class="form-control" type="text" placeholder="-" name="first_name" /><label class="form-label" for="first_name"><strong>Contact Number&nbsp;</strong></label><input id="first_name" class="form-control" type="text" placeholder="-" name="first_name" />
+                                                        </div><label class="form-label" for="email"><strong>Work Email Address</strong></label><input id="email" class="form-control" type="email" placeholder="godwinllabres@roc.com.ph" name="email" /><label class="form-label" for="first_name"><strong>Date of First Day</strong></label><input class="form-control" type="date"><label class="form-label" for="first_name"><strong>Date of Exit Day</strong></label><input class="form-control" type="date">
                                                     </div>
                                                 </div>
-                                                <div class="mb-3"><a href="profile-1.html" class="btn btn-primary btn-sm" >Save Changes </a></div>
+                                                <div class="mb-3"></div>
                                             </form>
                                         </div>
                                     </div>
